# softhsmv3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.h.in.cmake  constants.js  cpp_compliance_report.json  cpp_compliance_report.md  openssl_test.cnf  p11_v32_compliance_test.cpp  package.json  softhsm2.conf  softhsmv3devguide.md  test_async_integration.c  test_kat_validation.cpp  test_openssl_integration.sh  test_stateful_crypto.cpp  test_stateful_verify.cpp
docs/: gap-analysis-pkcs11-v3.2.md  rust-engine.md  security_audit_03222026.md  security_audit_04132026.md  softhsmv3devguide.md  softhsmv3gapanalysis.md  softhsmv3opsguide.md
openpgp/: .woodpecker.yml  Cargo.toml  README.md  rustfmt.toml
openpgp/cli/: Cargo.toml  README.md
openpgp/cli/ci/keys/: nist-p256.key  nist-p384.key  nist-p521.key  rsa2048.key  rsa3072.key  rsa4096.key
openpgp/cli/ci/pkcs11-scd/: Dockerfile  README.md  dummy-pinentry  gnupg-pkcs11-scd.conf  gpg-agent.conf  primary.exp  subkeys.exp  yubikey.rs.diff
openpgp/cli/ci/softhsm/: Dockerfile  testrun.sh
openpgp/lib/: Cargo.toml  README.md
openpgp/lib/src/: decryptor.rs  lib.rs  signer.rs  upload.rs  util.rs
openssh-pkcs11/: CHANGELOG.md
rust/: Cargo.toml
rust/src/: ffi.rs  (+3 more)
scripts/: build-strongswan-wasm-v2.sh  close_issues_27_28.sh  close_resolved_issues.sh  commit_changes.sh
src/: CMakeLists.txt
strongswan-wasm-v2-shims/: bob-worker.mjs  charon_wasm_main.c  test-kem-2worker.mjs  test-mechanisms.mjs  test-pkcs11.mjs
tests/: acvp-wasm.mjs  helpers.mjs  parity-wasm.mjs  softhsm2-local.conf  test_acvp_lms_sigver.py
(+93 files in other folders)
